fix visibility hidden pentru textarea categorii

--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -5,3 +5,6 @@ body {
 a.media{
   background-color: darkblue;
 }
+#category_description {
+  visibility: visible !important;
+}
